--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -50,11 +50,11 @@
 }
 
 .hero-church-name {
-  font-size: 4.2rem !important;
+  font-size: 5.5rem;
   font-weight: 900;
   line-height: 1.05;
-  margin: 0 0 1rem 0 !important;
-  letter-spacing: -1px;
+  margin: 0 0 1rem 0;
+  letter-spacing: -2px;
 }
 
 .hero-subtitle {
